[gd_scene load_steps=2 format=2]

[ext_resource path="res://scripts/WaitingRoom.gd" type="Script" id=1]

[node name="WaitingRoom" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -80.0
margin_top = -11.0
margin_right = 80.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Host_label" type="Label" parent="VBoxContainer"]
margin_right = 160.0
margin_bottom = 14.0
text = "Host: "
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Start_button" type="Button" parent="VBoxContainer"]
margin_top = 18.0
margin_right = 160.0
margin_bottom = 38.0
disabled = true
text = "Start Game"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="VBoxContainer/Start_button" to="." method="_on_Start_button_pressed"]
